--- a/Prover.Certificates.View/View/CreateCertificatesView.xaml
+++ b/Prover.Certificates.View/View/CreateCertificatesView.xaml
@@ -89,7 +89,12 @@
                     
                     <TextBlock>Created By:</TextBlock>
                     <TextBox Text="{Binding Path=CreatedBy}" />
-                    <Button Command="{Binding Path=CreateNewCertCommand}" Content="Create New" />
+                    <ComboBox Margin="0,15,0,0" ItemsSource="{Binding VerificationTypes}" SelectedValue="{Binding VerificationType}"  SelectedIndex="0">
+                    </ComboBox>
+                    <TextBlock Margin="0,15,0,0">Seal Exp. Date</TextBlock>
+                    <TextBlock Text="{Binding Path=SealExpirationDate}" />
+                    
+                    <Button Margin="0,20,0,0"  Command="{Binding Path=CreateNewCertCommand}" Content="Create New" />
                 </StackPanel>
             </Grid>
         </Grid>
